--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@carbon/icons-react": "^11.66.0",
     "@carbon/react": "^1.90.0",
     "@carbon/styles": "^1.89.0",
+    "i18next": "^25.5.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.7.3",
     "scss": "^0.2.4"
   },
   "devDependencies": {
